<resources>
    <string name="app_name">ScreenTimeController</string>
    <string name="daily_average">日均</string>
    <string name="float_value_change_from_last_week">与上周比浮动</string>
    <string name="daily_average_regex">%s小时%s分钟</string>
    <string name="view_all_activities">查看所有活动</string>
    <string name="update_time_regex">更新于: %s</string>
    <string name="stop_time">停用时间</string>
    <string name="set_block_up_time">设置停用时间</string>
    <string name="application_time_limit">应用限额</string>
    <string name="always_allow">始终允许</string>
    <string name="screen_time_controller">屏幕使用时间</string>
    <string name="set_task_max_usage">设置最大使用时长</string>
    <string name="add_always_allow">添加始终允许</string>
    <string name="remove_always_allow">删除始终允许</string>
    <string name="total_screen_usage_label">总屏幕使用时间</string>
    <string name="every_Week">每周</string>
    <string name="every_day">每日</string>
    <string name="enter_password">请输入f密码</string>
    <string name="ok">请输入f密码</string>
    <string name="cancel">请输入f密码</string>
</resources>